# my_ecs

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_unix.sh
src/ecs/: ecs.hpp  entity.hpp  registry.hpp  sparse_array.hpp
src/ecs/components/: auto_controlled.hpp  clock.hpp  collider.hpp  controllable.hpp  drawable.hpp  human.hpp  identifiable.hpp  limited.hpp  movable.hpp  position.hpp  sprite.hpp  velocity.hpp
tests/: doctest.cpp  test_registry.cpp  test_sparse_array.cpp
tests/components/: test_position.cpp  test_velocity.cpp
